--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,14 @@ body {
     font-family: "Edu TAS Beginner", cursive;
 }
 
+main {
+    background-image: url(/imgs/cork.png);
+}
+
+.width-calc {
+    width: calc((100% - 32px) / 3);
+}
+
 header {
     background-image: url(/imgs/wall.png);
 }
