--- a/styles/style.css
+++ b/styles/style.css
@@ -19,11 +19,33 @@ header {
     top: -10px;
 }
 
-.rot-div:hover{
-    transform: rotate(20deg);
+.rot-div:hover {
+    transform: rotate(10deg);
     transition: 0.5s;
+    
 }
 
 .rot-div:hover .pos {
     display: none;
 }
+
+.zoom-overlay {
+    position: fixed;
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0;
+    background: rgba(0,0,0,0.80);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+.zoom-overlay img {
+   width: 50%;
+   height: 80%; 
+}
+
+    
